manifests/argocd/httproutes.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: argocd
  namespace: argocd
spec:
  hostnames:
  - argocd.menia.cc
  parentRefs:
  - name: shared-gateway
    namespace: default
  rules:
  - backendRefs:
    - name: argocd-server
      port: 80
  - filters:
    - type: RequestRedirect
      requestRedirect:
        scheme: https
        statusCode: 301
        port: 443
